created mobile design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img class= "active" src = "Images/Photos/HL1.jpg"> 
         <img src="Images/Photos/HL2.jpg">
       </div>
-      <nav class = "slider-nav hidden">
+      <nav class = "slider-nav ">
         <ul>
           <li class="arrow">
             <button class="previous">
