--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
     <div class="col-2">
       <div class="slider slider-home">
-        <img class= "active" src = "Images/Photos/HL1.jpg"> 
-        <img src="Images/Photos/HL2.jpg">
+        <img class= "active" src = "images/photos/HL1.jpg"> 
+        <img src="images/photos/HL2.jpg">
       </div>
       <nav class = "slider-nav ">
         <ul>
