--- a/journal.html
+++ b/journal.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <div class="col-1">
-        <div class="heading"><a href="index.html"><h1>Alex Hodor-Lee</h1><h6>Photography, NYC</h6></a></div>
+        <div class="heading"><a href="index.html"><h1>Alex Hodor-Lee</h1></a></div>
       <div class="menu">
         <a href="index.html" id = "home">Home</a>
         <a href="journal.html" id = "journal"><b>Journal</b></a>
@@ -33,6 +33,33 @@
       <div class="slider">
         <img class= "active" src = "images/photos/HL1.jpg"> 
         <img src="images/photos/HL2.jpg">
+        <img src="images/photos/HL3.jpg">
+        <img src="images/photos/HL4.jpg">
+        <img src="images/photos/HL5.jpg">
+        <img src="images/photos/HL6.jpg">
+        <img src="images/photos/HL7.jpg">
+        <img src="images/photos/HL8.jpg">
+        <img src="images/photos/HL9.jpg">
+        <img src="images/photos/HL10.jpg">
+        <img src="images/photos/HL11.jpg">
+        <img src="images/photos/HL12.jpg">
+        <img src="images/photos/HL13.jpg">
+        <img src="images/photos/HL14.jpg">
+        <img src="images/photos/HL15.jpg">
+        <img src="images/photos/HL16.jpg">
+        <img src="images/photos/HL17.jpg">
+        <img src="images/photos/HL18.jpg">
+        <img src="images/photos/HL19.jpg">
+        <img src="images/photos/HL20.jpg">
+        <img src="images/photos/HL21.jpg">
+        <img src="images/photos/HL22.jpg">
+        <img src="images/photos/HL23.jpg">
+        <img src="images/photos/HL24.jpg">
+        <img src="images/photos/HL25.jpg">
+        <img src="images/photos/HL26.jpg">
+        <img src="images/photos/HL27.jpg">
+        <img src="images/photos/HL28.jpg">
+        <img src="images/photos/HL29.jpg">
       </div>
       <nav class = "slider-nav ">
         <ul>
@@ -55,8 +82,35 @@
     </div>
     </div>
     <div class="col-3">
-      <article class ="img-text img-1-text"><p>This is a photo of a woman</p></article>
-      <article class ="img-text img-2-text hidden"><p>this is a photo of a man and a woman</p></article>
+      <article class ="img-text img-1-text"><p>Howard (2021)</p></article>
+      <article class ="img-text img-2-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-3-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-4-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-5-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-6-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-7-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-8-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-9-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-10-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-11-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-12-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-13-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-14-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-15-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-16-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-17-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-18-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-19-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-20-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-21-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-22-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-23-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-24-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-25-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-26-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-27-text hidden"><p>Not Howard (Not 2021)</p></article>
+      <article class ="img-text img-28-text hidden"><p>Not Howard (Not 2021)</p></article>
+
 
     </div>
   </body>
