--- a/about.html
+++ b/about.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://use.typekit.net/wni2smc.css">
+    <link href="//db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300&display=swap" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/e4882e9d8090461fea09938d738a3361?family=Cooper+BT" rel="stylesheet" type="text/css"/>
+    <link href="//db.onlinewebfonts.com/c/0a9652f94cfcb374a9db6ccd8dfa944b?family=WeddingTextW01" rel="stylesheet" type="text/css"/>
 
 
     <script defer src="script.js"></script>
@@ -19,10 +23,10 @@
     <title>Alex Hodor-Lee</title>
     </style>
   </head>
-  <body>
-    <div class="container">
+  <body class="about-page">
+    <div class="container title">
       <div class="col-1">
-        <div class="heading"><a href="index.html"><h1>Alex Hodor-Lee</h1><h6>Photography, NYC</h6></a></div>
+        <div class="heading"><a href="index.html"><h1>ALEX<br>HODOR-LEE</h1></a></div>
       <div class="menu">
         <a href="index.html" id = "home">Home</a>
         <a href="journal.html" id = "journal">Journal</a>
@@ -31,8 +35,18 @@
     </div>
     <div class="col-2">
       <section class="about">
-        <h1>Heading</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi iste quasi eos harum quia soluta laboriosam nemo et cumque. Dignissimos corrupti sapiente tempore deserunt placeat aliquam necessitatibus, debitis ea culpa!</p>
+        <h1>ABOUT ME</h1>
+      <p class="about-text">Hi! <br><br> I’m 
+      <span id="name">Alex</span>
+      and I’m an American <span id="photographer">photographer</span>
+      and
+      <span id="journalist">journalist</span> from New York City. Among other publications, my work has been featured in New York, W, Vogue, and Document Journal. I’ve worked with a host of editorial outlets and frequently collaborate with brands. As a journalist, my writing focuses on science and society, as well as environmentalism. As a portrait photographer, I have enormous passion for faces and stories. I am available for assignments across the United States and worldwide. Send me an email:</p>
+
+      <p class="email"> alexhodorlee@gmail.com</p>
+      <p class="cu">See you soon,</p>
+      <p class="signature">Alex H-L😍</p> 
+      
+      
       </section>
 
     </div>
