--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="manifest" href="./images/photos/">
 
     <link rel="stylesheet" href="https://use.typekit.net/wni2smc.css">
+    <link href="//db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="styles/style.css">
@@ -23,7 +28,7 @@
   <body>
     <div class="container ">
       <div class="col-1 home-menu">
-        <div class="heading"><a href="index.html"><h1>Alex Hodor-Lee</h1></a>
+        <div class="heading"><a href="index.html"><h1>ALEX<br>HODOR-LEE</h1></a>
         <!-- <h6>Photography, NYC</h6></a> -->
       </div>
       <div class="menu">
@@ -49,14 +54,14 @@
           <li class="arrow">
             <button class="previous">
               <span>
-                <i class="ion-arrow-left-c"></i>
+                <i class="ion-ios-arrow-left"></i>
               </span>
             </button>
           </li>
          <li class="arrow">
             <button class="next">
               <span>
-                <i class="ion-arrow-right-c"></i>
+                <i class="ion-ios-arrow-right"></i>
               </span>
             </button>
           </li>
