--- a/journal.html
+++ b/journal.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://use.typekit.net/wni2smc.css">
+    <link href="//db.onlinewebfonts.com/c/2206d6cc490084998d531e8c1b2cbb4a?family=Druk+Wide+Bold" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300&display=swap" rel="stylesheet">
 
 
     <script defer src="script.js"></script>
@@ -22,7 +24,7 @@
   <body>
     <div class="container">
       <div class="col-1">
-        <div class="heading"><a href="index.html"><h1>Alex Hodor-Lee</h1></a></div>
+        <div class="heading"><a href="index.html"><h1>ALEX<br>HODOR-LEE</h1></a></div>
       <div class="menu">
         <a href="index.html" id = "home">Home</a>
         <a href="journal.html" id = "journal"><b>Journal</b></a>
@@ -66,14 +68,14 @@
           <li class="arrow">
             <button class="previous">
               <span>
-                <i class="ion-arrow-left-c"></i>
+                <i class="ion-ios-arrow-left"></i>
               </span>
             </button>
           </li>
          <li class="arrow">
             <button class="next">
               <span>
-                <i class="ion-arrow-right-c"></i>
+                <i class="ion-ios-arrow-right"></i>
               </span>
             </button>
           </li>
